--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="sites">
             <h2 class="text-sites">Sites</h2>
-            <a href="../projkervette/index.html" class="kervette">Kervette</a>
+            <a href="https://henrique12340875.github.io/primeiro-site/" class="kervette">Kervette</a>
         </div>
     </div>
 </body>
